Finish splitting-up PermissionsService